--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,18 +7,35 @@
     tools:context=".MainServerActivity">
 
     <Button
-        android:id="@+id/bt_get_order_unary"
+        android:id="@+id/btn_start_server"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
+        android:text="启动服务"/>
+
+    <Button
+        android:id="@+id/btn_stop_server"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btn_start_server"
+        android:text="停止服务"/>
+
+    <Button
+        android:id="@+id/bt_get_order_unary"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="20dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintLeft_toRightOf="@+id/btn_start_server"
         android:text="一元RPC"/>
 
     <Button
         android:id="@+id/bt_get_order_server_stream"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintLeft_toLeftOf="@+id/bt_get_order_unary"
         app:layout_constraintTop_toBottomOf="@+id/bt_get_order_unary"
         android:text="服务器端流RPC"/>
 
@@ -28,7 +45,7 @@
         android:id="@+id/bt_get_order_client_stream"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintLeft_toLeftOf="@+id/bt_get_order_unary"
         app:layout_constraintTop_toBottomOf="@+id/bt_get_order_server_stream"
         android:text="客户端流RPC"/>
 
@@ -37,7 +54,7 @@
         android:id="@+id/bt_get_order_two_way_stream"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintLeft_toLeftOf="@+id/bt_get_order_unary"
         app:layout_constraintTop_toBottomOf="@+id/bt_get_order_client_stream"
         android:text="双向流RPC"/>
 
